# beef

./: LICENSE  README.md  beef.py  pyproject.toml
.github/workflows/: ci.yml
